Update plugin (France -> World)
